# Projekat

./: CMakeLists.txt  README.md  fragmentShader.fs
include/: Camera.h  Mesh.h  Model.h  Shader.h
libs/glad/: CMakeLists.txt
models/objects/: 81-street-lamp.rar
shaders/: blackBackground.fs  crateShader.fs  floorShader.fs  floorShader.vs  grassShader.fs  modelShader.fs  modelShader.vs  soadShader.fs  sphereShader.fs  sphereShader.vs
src/: Camera.cpp  Mesh.cpp  Model.cpp  Shader.cpp  main.cpp
testShaders/: cubeShader.fs  lightCube.fs  triangleShader.fs
